<resources>
    <string name="app_name">StellarEvents</string>
    <string name="app_id">462245673914357</string>
    <string name="action_settings">Settings</string>
    <string name="login">Sign in with Facebook</string>
    <string name="logout">Log Out</string>
    <string name="login_intro">Check out your Facebook profile by logging in with the button below!</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="relationship">Relationship</string>
    <string name="post">Post</string>
    <string name="prompt_post">Post</string>
    <string name="post_out_of_range">Can\'t view post! Get closer.</string>
    <string name="progress_post">Posting…</string>
    <string name="settings_distance_format">%d feet</string>
    <string name="activity_post_title">Create a Post</string>
    <string name="character_count_placeholder">0/140</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="title_post">Title</string>
    <string name="time_post">Time</string>
    <string name="add_place">Add Place</string>
    <string name="name_place">Name Place</string>
    <string name="plan_details">Plan Details</string>
    <string name="Profils_user">Profile</string>
    <string name="Plan_List">Plans List</string>
    <string name="create_plan">Create Plan</string>
    <string name="List_Friends">Friends List</string>
    <string name="confirme">Yes</string>
    <string name="cancel">No</string>
    <string name="confirme_logout">Are you sure?</string>
    <string name="Alert">*Field required</string>
    <string name="connection">Check your connection</string>
    <string name="friend_find">No friends found</string>
    <string name="friend_invite">Invite Friends</string>
    <string name="near_friends">Near Friends</string>
    <string name="acceuil">Home</string>
    <string name="next">Next</string>
    <string name="close">Close</string>
    <string name="invitfirst">Tag and share with friends</string>
    <string name="profil_show">Tap to access your profile</string>
    <string name="map_show">Choose your plan position and long press to create</string>
    <string name="check_map">Tag where you are</string>
    <string name="check_maptag">Add tag</string>
    <string name="profil_map">Your plans</string>
    <string name="profil_map_tag">Your tags</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="settingsGps">GPS is not enabled. Do you want enable it?</string>
    <string name="title_activity_test_drawer">TestDrawer</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Complete">Complete</string>
    <string name="Error">Error</string>
    <string name="addFriends">Add Friends</string>
    <string name="addimage">Add</string>
    <string name="title_activity_activity_container">ActivityContainer</string>
    <string name="action_profil">Profil</string>
    <string name="title_activity_activity_test">ActivityTest</string>
    <string name="title_activity_check">CheckActivity</string>
    <string name="addEvents">Add events</string>
    <string name="Main">Accueil</string>
    <string name="programme">Programme</string>
    <string name="placesAlert">Add a valid place</string>
    <string name="notif">Notification</string>

</resources>