<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="pira.stellerin.com.projectinvite.Fragment.PostFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:orientation="vertical"
        cardview:cardElevation="5dp"
        cardview:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_margin="7dp"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:hint="Location"
                android:layout_marginTop="45sp"
                android:textColorHint="#0091EA"
                android:textSize="16sp"
                android:textStyle="bold"
                app:baseColor="#000"
                app:floatingLabel="highlight"
                app:primaryColor="#1e88e5"
                app:singleLineEllipsis="true" />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/post_edittext"
                android:layout_width="fill_parent"
                android:layout_height="200sp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/editText3"
                android:layout_marginTop="45sp"
                android:hint="@string/prompt_post"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:lines="8"
                android:minLines="6"
                android:maxLines="10"
                android:singleLine="false"
                android:scrollbars="vertical"
                android:text=""
                android:textColorHint="#0091EA"
                android:textSize="16sp"
                android:textStyle="bold"
                app:baseColor="#000"
                app:floatingLabel="highlight"
                app:primaryColor="#1e88e5"
                app:singleLineEllipsis="false" />


            <com.dd.CircularProgressButton
                android:id="@+id/post_button"
                android:layout_width="196dp"
                android:layout_height="64dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/post_edittext"
                android:layout_marginTop="45sp"
                android:layout_marginBottom="40sp"
                android:layout_marginRight="5sp"
                android:layout_marginLeft="5sp"
                android:textColor="@color/white"
                android:textSize="25dp"
                app:cpb_iconComplete="@drawable/ic_action_accept"
                app:cpb_iconError="@drawable/ic_action_cancel"
                app:cpb_selectorComplete="@drawable/complete_state_selector"
                app:cpb_selectorError="@drawable/error_state_selector"
                app:cpb_selectorIdle="@drawable/idle_state_selector"
                app:cpb_textComplete="@string/Complete"
                app:cpb_textError="@string/Error"
                app:cpb_textIdle="@string/post" />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/location"
                android:layout_marginTop="45sp"
                android:hint="@string/title_post"
                android:shadowColor="#0091EA"
                android:textColorHint="#0091EA"
                android:textStyle="bold"
                app:baseColor="#000"
                app:floatingLabel="highlight"
                app:primaryColor="#1e88e5"
                app:singleLineEllipsis="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/editText1"
                android:layout_marginTop="45sp"
                android:clickable="true"
                android:editable="false"
                android:hint="Date"
                android:shadowColor="#0091EA"
                android:text=""
                android:textColorHint="#0091EA"
                android:textStyle="bold"
                app:baseColor="#000"
                app:floatingLabel="highlight"
                app:primaryColor="#1e88e5"
                app:singleLineEllipsis="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/editText2"
                android:layout_marginTop="45sp"
                android:clickable="true"
                android:editable="false"
                android:hint="@string/time_post"
                android:shadowColor="#0091EA"
                android:text=""
                android:textColorHint="#0091EA"
                android:textStyle="bold"
                app:baseColor="#000"
                app:floatingLabel="highlight"
                app:primaryColor="#1e88e5"
                app:singleLineEllipsis="true" />


        </RelativeLayout>


    </android.support.v7.widget.CardView>

</ScrollView>